--- a/archives.html
+++ b/archives.html
@@ -12,13 +12,13 @@
 
 
         <!-- Bootstrap Core CSS -->
-        <link href="./theme/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://minnanogengogaku.github.io/theme/css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Custom CSS -->
-        <link href="./theme/css/clean-blog.min.css" rel="stylesheet">
+        <link href="https://minnanogengogaku.github.io/theme/css/clean-blog.min.css" rel="stylesheet">
 
         <!-- Code highlight color scheme -->
-            <link href="./theme/css/code_blocks/tomorrow.css" rel="stylesheet">
+            <link href="https://minnanogengogaku.github.io/theme/css/code_blocks/tomorrow.css" rel="stylesheet">
 
         <!-- Custom Fonts -->
         <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -49,7 +49,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="./">Minna no gengogaku</a>
+                <a class="navbar-brand" href="https://minnanogengogaku.github.io/">Minna no gengogaku</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -58,10 +58,10 @@
                         <li><a href="/pages/about.html">О блоге</a></li>
                         <li><a href="/pages/contactme.html">Контакты</a></li>
 
-                                <li><a href="./category/aot.html">АОТ</a></li>
-                                <li><a href="./category/iaponskii.html">Японский</a></li>
-                                <li><a href="./category/lingvistika.html">Лингвистика</a></li>
-                                <li><a href="./category/perevod.html">Перевод</a></li>
+                                <li><a href="https://minnanogengogaku.github.io/category/aot.html">АОТ</a></li>
+                                <li><a href="https://minnanogengogaku.github.io/category/iaponskii.html">Японский</a></li>
+                                <li><a href="https://minnanogengogaku.github.io/category/lingvistika.html">Лингвистика</a></li>
+                                <li><a href="https://minnanogengogaku.github.io/category/perevod.html">Перевод</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -70,7 +70,7 @@
     </nav>
 
     <!-- Page Header -->
-        <header class="intro-header" style="background-image: url('./theme/images/home-bg.jpg')">
+        <header class="intro-header" style="background-image: url('https://minnanogengogaku.github.io/theme/images/home-bg.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -88,19 +88,19 @@
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
     <dl>
             <dt>Wed 01 July 2020</dt>
-            <dd><a href="./waorga.html">Wa или ga?</a></dd>
+            <dd><a href="https://minnanogengogaku.github.io/waorga.html">Wa или ga?</a></dd>
             <dt>Wed 30 October 2019</dt>
-            <dd><a href="./buying-mittens.html">Сказка Нанкити Ниими "За рукавичками"</a></dd>
+            <dd><a href="https://minnanogengogaku.github.io/buying-mittens.html">Сказка Нанкити Ниими "За рукавичками"</a></dd>
             <dt>Sun 28 July 2019</dt>
-            <dd><a href="./momoko-ishii-books.html">Список детских книг от Момоко Исии</a></dd>
+            <dd><a href="https://minnanogengogaku.github.io/momoko-ishii-books.html">Список детских книг от Момоко Исии</a></dd>
             <dt>Fri 07 June 2019</dt>
-            <dd><a href="./input-methods.html">Об основном методе ввода японского языка</a></dd>
+            <dd><a href="https://minnanogengogaku.github.io/input-methods.html">Об основном методе ввода японского языка</a></dd>
             <dt>Sat 18 May 2019</dt>
-            <dd><a href="./japanese-resources.html">Ресурсы для работы с японским языком</a></dd>
+            <dd><a href="https://minnanogengogaku.github.io/japanese-resources.html">Ресурсы для работы с японским языком</a></dd>
             <dt>Fri 08 March 2019</dt>
-            <dd><a href="./don-quixote.html">Хитроумный ронин Дон Кихот Токийский</a></dd>
+            <dd><a href="https://minnanogengogaku.github.io/don-quixote.html">Хитроумный ронин Дон Кихот Токийский</a></dd>
             <dt>Sat 23 February 2019</dt>
-            <dd><a href="./why-is-japanese-complicated.html">Почему японский язык такой сложный?</a></dd>
+            <dd><a href="https://minnanogengogaku.github.io/why-is-japanese-complicated.html">Почему японский язык такой сложный?</a></dd>
         <hr>
     </dl>
             </div>
@@ -148,13 +148,13 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="./theme/js/jquery.js"></script>
+    <script src="https://minnanogengogaku.github.io/theme/js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="./theme/js/bootstrap.min.js"></script>
+    <script src="https://minnanogengogaku.github.io/theme/js/bootstrap.min.js"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="./theme/js/clean-blog.min.js"></script>
+    <script src="https://minnanogengogaku.github.io/theme/js/clean-blog.min.js"></script>
 
 <script type="text/javascript">
     var disqus_shortname = 'minnanogengogaku';
