--- a/tags.html
+++ b/tags.html
@@ -12,13 +12,13 @@
 
 
         <!-- Bootstrap Core CSS -->
-        <link href="./theme/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://minnanogengogaku.github.io/theme/css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Custom CSS -->
-        <link href="./theme/css/clean-blog.min.css" rel="stylesheet">
+        <link href="https://minnanogengogaku.github.io/theme/css/clean-blog.min.css" rel="stylesheet">
 
         <!-- Code highlight color scheme -->
-            <link href="./theme/css/code_blocks/tomorrow.css" rel="stylesheet">
+            <link href="https://minnanogengogaku.github.io/theme/css/code_blocks/tomorrow.css" rel="stylesheet">
 
         <!-- Custom Fonts -->
         <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -49,7 +49,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="./">Minna no gengogaku</a>
+                <a class="navbar-brand" href="https://minnanogengogaku.github.io/">Minna no gengogaku</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -58,10 +58,10 @@
                         <li><a href="/pages/about.html">О блоге</a></li>
                         <li><a href="/pages/contactme.html">Контакты</a></li>
 
-                                <li><a href="./category/aot.html">АОТ</a></li>
-                                <li><a href="./category/iaponskii.html">Японский</a></li>
-                                <li><a href="./category/lingvistika.html">Лингвистика</a></li>
-                                <li><a href="./category/perevod.html">Перевод</a></li>
+                                <li><a href="https://minnanogengogaku.github.io/category/aot.html">АОТ</a></li>
+                                <li><a href="https://minnanogengogaku.github.io/category/iaponskii.html">Японский</a></li>
+                                <li><a href="https://minnanogengogaku.github.io/category/lingvistika.html">Лингвистика</a></li>
+                                <li><a href="https://minnanogengogaku.github.io/category/perevod.html">Перевод</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -70,7 +70,7 @@
     </nav>
 
     <!-- Page Header -->
-        <header class="intro-header" style="background-image: url('./theme/images/home-bg.jpg')">
+        <header class="intro-header" style="background-image: url('https://minnanogengogaku.github.io/theme/images/home-bg.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -86,14 +86,14 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-    <h1>Tags for Minna no gengogaku</h1>        <li><a href="./tag/aot.html">АОТ</a> (1)</li>
-        <li><a href="./tag/iaponskii.html">японский</a> (7)</li>
-        <li><a href="./tag/iazykovaia-slozhnost.html">языковая сложность</a> (1)</li>
-        <li><a href="./tag/iazykovoe-rodstvo.html">языковое родство</a> (1)</li>
-        <li><a href="./tag/izuchenie-iaponskogo.html">изучение японского</a> (1)</li>
-        <li><a href="./tag/lingvistika.html">лингвистика</a> (2)</li>
-        <li><a href="./tag/perevod.html">перевод</a> (4)</li>
-        <li><a href="./tag/perevodovedenie.html">переводоведение</a> (1)</li>
+    <h1>Tags for Minna no gengogaku</h1>        <li><a href="https://minnanogengogaku.github.io/tag/aot.html">АОТ</a> (1)</li>
+        <li><a href="https://minnanogengogaku.github.io/tag/iaponskii.html">японский</a> (7)</li>
+        <li><a href="https://minnanogengogaku.github.io/tag/iazykovaia-slozhnost.html">языковая сложность</a> (1)</li>
+        <li><a href="https://minnanogengogaku.github.io/tag/iazykovoe-rodstvo.html">языковое родство</a> (1)</li>
+        <li><a href="https://minnanogengogaku.github.io/tag/izuchenie-iaponskogo.html">изучение японского</a> (1)</li>
+        <li><a href="https://minnanogengogaku.github.io/tag/lingvistika.html">лингвистика</a> (2)</li>
+        <li><a href="https://minnanogengogaku.github.io/tag/perevod.html">перевод</a> (4)</li>
+        <li><a href="https://minnanogengogaku.github.io/tag/perevodovedenie.html">переводоведение</a> (1)</li>
             </div>
         </div>
     </div>
@@ -139,13 +139,13 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="./theme/js/jquery.js"></script>
+    <script src="https://minnanogengogaku.github.io/theme/js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="./theme/js/bootstrap.min.js"></script>
+    <script src="https://minnanogengogaku.github.io/theme/js/bootstrap.min.js"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="./theme/js/clean-blog.min.js"></script>
+    <script src="https://minnanogengogaku.github.io/theme/js/clean-blog.min.js"></script>
 
 <script type="text/javascript">
     var disqus_shortname = 'minnanogengogaku';
