--- a/waorga.html
+++ b/waorga.html
@@ -156,7 +156,7 @@ Sakura  wa  haru    saku.<br>
 <p>太郎が死んだ<br>
 [Taroo  ga]<sub>Ф</sub> [shinda]<sub>T</sub><br>
 ‘Таро умер’</p>
-<p>Попробуем обобщить разницу между употреблением <em>wa</em> и  <em>ga</em> для оформления подлежащего. Можно сказать, что <em>wa</em> используется, когда фокус (новая информация) — сказуемое. <em>Ga</em> используется, если фокус — не сказуемое, подлежащее либо высказывание целиком.</p>
+<p>Попробуем обобщить разницу между употреблением <em>wa</em> и  <em>ga</em> для оформления подлежащего. Можно сказать, что <em>wa</em> используется, когда фокус (новая информация) — сказуемое. <em>Ga</em> используется, если фокус — не сказуемое, а подлежащее либо высказывание целиком.</p>
     </article>
 
     <hr>
