--- a/pages/about.html
+++ b/pages/about.html
@@ -90,7 +90,7 @@
     <article>
         <p>Minna No Gengogaku — блог о лингвистике, японском языке, переводе и автоматической обработке текста. Название переводится с японского как "лингвистика для всех". Этот блог может быть полезен читателям, которые интересовались данными темами, но никогда раньше всерьез в них не углублялись.</p>
 <p>Автор блога — компьютерный лингвист, переводчик и преподаватель японского Наталия Соломкина.</p>
-<p>Вы можете подписаться на обновления блога и следить за дополнительной информацией в <a href="https://www.facebook.com/minnanogengogaku/">Facebook</a>, <a href="https://vk.com/minnanogengogaku">ВКонтакте</a> и <a href="https://teleg.run/minnanogengogaku">Telegram</a>.</p>
+<p>Вы можете подписаться на обновления блога и следить за дополнительной информацией в <a href="https://www.facebook.com/minnanogengogaku/">Facebook</a> и <a href="https://vk.com/minnanogengogaku">ВКонтакте</a>.</p>
     </article>
             </div>
         </div>
