--- a/waorga.html
+++ b/waorga.html
@@ -124,7 +124,7 @@ Sakura  wa  haru    saku.<br>
 <p>(2) この木は私が植えた<br>
  Kono ki wa watasi ga ueta.<br>
 ‘Это дерево я посадил.’ </p>
-<p>При этом <em>wa</em> вытесняет показатели именительного и винительрного падеджей <em>ga</em> и <em>o</em>, может вытеснять показатели направления <em>he</em> и места <em>ni</em> или соседствовать с ними, и соседствует с другими падежными показателями. </p>
+<p>При этом <em>wa</em> вытесняет показатели именительного и винительного падеджей <em>ga</em> и <em>o</em>, может вытеснять показатели направления <em>he</em> и места <em>ni</em> или соседствовать с ними, и соседствует с другими падежными показателями. </p>
 <p>Тем не менее, чаще всего встречаются примеры, где топикализовано именно подлежащее, то есть <em>wa</em> стоит вместо <em>ga</em>. 
 В классическом описании употребления <em>wa</em> и  <em>ga</em> по Куно Сусуму выделяется четыре случая:  </p>
 <ul>
