--- a/waorga.html
+++ b/waorga.html
@@ -138,7 +138,7 @@ Sakura  wa  haru    saku.<br>
 <li>контрастивное <em>wa</em>  </li>
 </ul>
 <p>Используется при противопоставлении:  </p>
-<p>ビールは飲みなすが、お酒は飲みません<br>
+<p>ビールは飲みますが、お酒は飲みません<br>
 [biiru  wa]<sub>T</sub> [nom-imas-u ga]<sub>Ф</sub>,    [o-sake wa]<sub>T</sub> [nom-imas-en]<sub>Ф</sub><br>
 ‘Я пью пиво, а сакэ не пью.’  </p>
 <p>К контрастивному употреблению также относится употребление <em>wa</em> при смене протагониста в повествовании. При этом существительное, оформленное показателем топика, не обязано быть определенным.</p>
